Sync all content

--- a/content/resources/14-74s09.md
+++ b/content/resources/14-74s09.md
@@ -5,8 +5,7 @@ file: /courses/14-74-foundations-of-development-policy-spring-2009/a32a113e9f29b
 file_size: 59797
 file_type: image/jpeg
 image_metadata:
-  caption: South African outdoor classroom. (Image courtesy of the {{% resource_link
-    "82350330-67ab-43ed-9a5b-a6553bff35dd" "U.S. Peace Corps" %}}.)
+  caption: South African outdoor classroom. (Image courtesy of the [U.S. Peace Corps](http://www.peacecorps.gov/).)
   credit: ''
   image-alt: Students sit in a classroom in a grassy field.
 learning_resource_types: []
